main/default/objects/Training_Plan_Feedback__c/Training_Plan_Feedback__c.object-meta.xml
<CustomObject>
    <label>Training Plan Feedback</label>
    <nameField>
        <displayFormat>TPF-{0000000}</displayFormat>
        <label>Training Plan Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plan Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>