main/default/objects/Training_Plan_Feedback__c/fields/Training_Plan__c.field-meta.xml
<CustomField>
    <fullName>Training_Plan__c</fullName>
    <label>Training Plan</label>
    <referenceTo>Training_Plan__c</referenceTo>
    <relationshipLabel>Training Plan Feedback</relationshipLabel>
    <relationshipName>Training_Plan_Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>